--- a/.github/workflows/pipeline-deploy-s3.yml
+++ b/.github/workflows/pipeline-deploy-s3.yml
@@ -14,14 +14,14 @@ jobs:
           node-version: '18'
           cache: 'npm'
       - name: frontend install
-        run: npm --prefix frontend install
+        run: npm --prefix my-app-frontend install
       - name: frontend build
-        run: npm --prefix frontend run build
+        run: npm --prefix my-app-frontend run build
       - name: upload frontend build
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: frontend/.next/server/app
+          path: my-app-frontend/.next/server/app
 
   deploy:
     runs-on: ubuntu-latest
@@ -36,5 +36,5 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
         name: build
-        path: frontend/.next/server/app
-      - run: aws s3 cp frontend/.next/server/app s3://$BUCKET_S3 --recursive --acl public-read
+        path: my-app-frontend/.next/server/app
+      - run: aws s3 cp my-app-frontend/.next/server/app s3://$BUCKET_S3 --recursive --acl public-read
